smy2kkl2/smy2kkl/smy2kkl/GpMessages/331407321916900
<?xml version="1.0" encoding="utf-8"?><messages><msg code="0" type="2">Start Time: יום שלישי 21 נובמבר 2023 11:17:39</msg><msg code="-2147467259" type="100">  File "C:\MDGISS\devs\smy2kkl\Scripts\‏‏smy2kkl_param.py", line 383
    arcpy.AddMessage('Relationship classes deleted')
                                                    ^
IndentationError: unindent does not match any outer indentation level
</msg><msg code="0" type="0">Failed script (null)...</msg><msg code="-2147467259" type="100">Failed to execute (ConvertToKKLStandard).</msg><msg code="0" type="3">Failed at יום שלישי 21 נובמבר 2023 11:17:39 (Elapsed Time: 0.04 seconds)</msg></messages>